css/_ui.less
select, button { -webkit-tap-highlight-color:rgba(0,0,0,0); border:none; -webkit-appearance: none; }

body {
    -webkit-text-size-adjust: none;
}

// Mixin
.box-sizing {
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
}
///
#flight {
  position: absolute;
  height:100%;
  margin: auto;
  overflow:hidden;
  width: 100%;
  -webkit-transform: translate3d(0%, 0px, 0px) scale(1) rotate(0deg) rotateY(0deg) skew(0deg, 0deg);
  background: blue;
}

div {
  -webkit-perspective:1000px;
  -webkit-backface-visibility: hidden;
}

.panel {
  display: none;
  background: #f1ebe2;
  border:0px solid #55819A;
  position: absolute;
  height:100%;
  width:100%;
  .box-sizing;
    .content {
      background: #f1ebe2;
    }

    &.visible {
      display: block;
    }
}

img {
  padding: 10px;
}

.fixed-top, fixed-bottom {
  position: fixed;
  width:100%;
  z-index: 250;
}

.fixed-top {
  top:0;
}

.fixed-bottom {
  bottom:0;
}

.toolbar {
  background-color: #ccc;
  .gradient;
  border-bottom: 1px solid #666;
  height:48px;
  .inner {
    .box-sizing;
    padding: 7px 10px;
  }
  button {
    font-family: inherit;
    font-size: 12px;
    font-weight: bold;
    text-shadow: rgba(0, 0, 0, 0.6) 0px -1px 0;
    -webkit-border-radius: 6px;
    border: 1px solid #45505D;
    .gradient;
    padding: 10px;
    color: white;
  }
  .left, .right {
    position: absolute;
  }
  .left {
    left:6px;
  }
  .right {
    right:6px;
  }
  h1 {
    font-size: 18px;
    color: white;
    display: block;
    text-align: center;
    overflow: hidden;
    line-height: 35px;
    margin: auto;
    text-shadow: 0px 1px 0px white;
  }
}

.gradient {
  background: #4d4e5b; /* Old browsers */
  background: -moz-linear-gradient(top,  #4d4e5b 0%, #292a31 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#4d4e5b), color-stop(100%,#292a31)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  #4d4e5b 0%,#292a31 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  #4d4e5b 0%,#292a31 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  #4d4e5b 0%,#292a31 100%); /* IE10+ */
  background: linear-gradient(top,  #4d4e5b 0%,#292a31 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4d4e5b', endColorstr='#292a31',GradientType=0 ); /* IE6-9 */

}

